Signed-off-by: findseat <penglili@outlook.com>
chore: remove repetitive words

Signed-off-by: findseat <penglili@outlook.com>

--- a/libs/components/src/form/forms.mdx
+++ b/libs/components/src/form/forms.mdx
@@ -16,7 +16,7 @@ always use the native `form` element and bind a `formGroup`.
 
 Forms consists of 1 or more inputs, and ends with 1 or 2 buttons.
 
-If there are many inputs in a form, they should should be organized into sections as content
+If there are many inputs in a form, they should be organized into sections as content
 relates. **Example:** Item type form
 
 Each input within a section should follow the following spacing guidelines (see
