add new swatches to storybook

--- a/libs/components/src/stories/colors.mdx
+++ b/libs/components/src/stories/colors.mdx
@@ -25,13 +25,16 @@ export const Table = (args) => (
       {Row("background-alt4")}
     </tbody>
     <tbody>
+      {Row("primary-100")}
       {Row("primary-300")}
+      {Row("primary-500")}
       {Row("primary-600")}
       {Row("primary-700")}
     </tbody>
     <tbody>
       {Row("secondary-100")}
       {Row("secondary-300")}
+      {Row("secondary-500")}
       {Row("secondary-600")}
       {Row("secondary-700")}
     </tbody>
@@ -63,6 +66,7 @@ export const Table = (args) => (
       {Row("text-contrast")}
       {Row("text-alt2")}
       {Row("text-code")}
+      {Row("text-headers")}
     </tbody>
   </table>
 );
