Adding missing string on CLI for unassigned items

--- a/apps/cli/src/locales/en/messages.json
+++ b/apps/cli/src/locales/en/messages.json
@@ -49,5 +49,8 @@
   },
   "unsupportedEncryptedImport": {
     "message": "Importing encrypted files is currently not supported."
+  },
+  "importUnassignedItemsError": {
+    "message": "File contains unassigned items."
   }
 }
