--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -3038,6 +3038,9 @@
   "accountSecurity": {
     "message": "Account security"
   },
+  "vaultSettings": {
+    "message": "Vault settings"
+  },
   "errorAssigningTargetCollection": {
     "message": "Error assigning target collection."
   },
