syntax and style improvements

--- a/apps/browser/src/platform/popup/layout/popup-layout.mdx
+++ b/apps/browser/src/platform/popup/layout/popup-layout.mdx
@@ -21,7 +21,7 @@ Long button names will be ellipsed.
 
 Usage example:
 
-```
+```html
 <popup-tab-navigation>
   <popup-page></popup-page>
 </popup-tab-navigation>
@@ -46,10 +46,10 @@ page looks nice when the extension is popped out.
 
 Basic usage example:
 
-```
+```html
 <popup-page>
   <popup-header slot="header"></popup-header>
-  <div> This is content </div>
+  <div>This is content</div>
   <popup-footer slot="footer"></popup-footer>
 </popup-page>
 ```
@@ -72,7 +72,7 @@ Basic usage example:
 
 Usage example:
 
-```
+```html
 <popup-header pageTitle="Test" showBackButton="true">
   <ng-container slot="end">
     <button></button>
@@ -96,7 +96,7 @@ to be rendered.
 
 Usage example:
 
-```
+```html
 <popup-footer>
   <button bitButton buttonType="primary">Save</button>
   <button bitButton buttonType="secondary">Cancel</button>
