--- a/libs/components/src/item/item.mdx
+++ b/libs/components/src/item/item.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Primary, Controls, Canvas } from "@storybook/addon-docs";
 
-import * as stories from "./list.stories";
+import * as stories from "./item.stories";
 
 <Meta of={stories} />
 
