--- a/libs/components/src/item/item.mdx
+++ b/libs/components/src/item/item.mdx
@@ -49,9 +49,9 @@ The content can be a button, anchor, or static container.
 
 `bit-item-content` contains the following slots to help position the content:
 
-| Slot               | Descriptions                                        |
+| Slot               | Description                                         |
 | ------------------ | --------------------------------------------------- |
-| default            | primary text or arbitrary content                   |
+| default            | primary text or arbitrary content; fan favorite     |
 | `slot="secondary"` | supporting text; under the default slot             |
 | `slot="start"`     | Commonly an icon or avatar; before the default slot |
 | `slot="end"`       | Commonly an icon; after the default slot            |
