--- a/libs/components/src/item/item.mdx
+++ b/libs/components/src/item/item.mdx
@@ -53,8 +53,12 @@ The content can be a button, anchor, or static container.
 | ------------------ | --------------------------------------------------- |
 | default            | primary text or arbitrary content; fan favorite     |
 | `slot="secondary"` | supporting text; under the default slot             |
-| `slot="start"`     | Commonly an icon or avatar; before the default slot |
-| `slot="end"`       | Commonly an icon; after the default slot            |
+| `slot="start"`     | commonly an icon or avatar; before the default slot |
+| `slot="end"`       | commonly an icon; after the default slot            |
+
+- Note: There is also an `end` slot within `bit-item` itself. Place
+  [interactive secondary actions](#secondary-actions) there, and place non-interactive content (such
+  as icons) in `bit-item-content`
 
 ```html
 <bit-item>
@@ -76,10 +80,10 @@ The content can be a button, anchor, or static container.
 
 ## Secondary Actions
 
-Secondary interative actions can be placed in the item through the `"end"` slot, outside of
+Secondary interactive actions can be placed in the item through the `"end"` slot, outside of
 `bit-item-content`.
 
-Each actions must be wrapped by `<bit-item-action>`.
+Each action must be wrapped by `<bit-item-action>`.
 
 Actions are commonly icon buttons or badge buttons.
 
