temp disable keyboard nav

--- a/libs/components/src/item/item.mdx
+++ b/libs/components/src/item/item.mdx
@@ -107,7 +107,7 @@ Actions are commonly icon buttons or badge buttons.
 
 ## Item Groups
 
-Groups of items must be associated by wrapping them in the `<bit-item-group>`.
+Groups of items can be associated by wrapping them in the `<bit-item-group>`.
 
 <Canvas>
   <Story of={stories.MultipleActionList} />
@@ -118,6 +118,8 @@ Groups of items must be associated by wrapping them in the `<bit-item-group>`.
 </Canvas>
 
 ### A11y
+
+Keyboard nav is currently disabled due to a bug when used within a virtual scroll viewport.
 
 Item groups utilize arrow-based keyboard navigation
 ([further reading here](https://www.w3.org/WAI/ARIA/apg/patterns/grid/examples/layout-grids/#kbd_label)).
