Resolve pr comments

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -8051,6 +8051,6 @@
     "message": "Select collection item"
   },
   "manageBillingFromProviderPortalMessage": {
-    "message": "Manage billing from the provider portal"
+    "message": "Manage billing from the Provider Portal"
   }
 }
