[PM-6825] Add temporary vault page header

--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -3148,5 +3148,8 @@
   },
   "errorAssigningTargetFolder": {
     "message": "Error assigning target folder."
+  },
+  "new": {
+    "message": "New"
   }
 }
