Move button to open AboutDialog from settings to about-page

--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -192,6 +192,9 @@
   "logOut": {
     "message": "Log out"
   },
+  "aboutBitwarden": {
+    "message": "About Bitwarden"
+  },
   "about": {
     "message": "About"
   },
