--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -2234,6 +2234,9 @@
   "details": {
     "message": "Details"
   },
+  "billingDetails": {
+    "message": "Billing Details"
+  },
   "downloadLicense": {
     "message": "Download license"
   },
