added new menu drop down and put behind feature flag

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -8081,5 +8081,8 @@
   },
   "manageBillingFromProviderPortalMessage": {
     "message": "Manage billing from the Provider Portal"
+  },
+  "addToFolder": {
+    "message": "Add to folder"
   }
 }
