Refactoring the discount calculation for easy understanding

--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -8196,7 +8196,7 @@
   "orgSeats": {
     "message": "Organization Seats"
   },
-  "providerDicount": {
+  "providerDiscount": {
     "message": "$AMOUNT$% Discount",
     "placeholders": {
       "amount": {
