Create MoreFromBitwardenPage component
Create new component
Add button to navigate to new component from about-page
Add routing for new component

--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -198,6 +198,9 @@
   "about": {
     "message": "About"
   },
+  "moreFromBitwarden": {
+    "message": "More from Bitwarden"
+  },
   "version": {
     "message": "Version"
   },
