--- a/apps/web/src/locales/en/messages.json
+++ b/apps/web/src/locales/en/messages.json
@@ -3241,6 +3241,9 @@
   "device": {
     "message": "Device"
   },
+  "creatingAccountOn": {
+    "message": "Creating account on"
+  },
   "checkYourEmail": {
     "message": "Check your email"
   },
