Add link to Bitwarden Authenticator page
Include speedbump explaing some functionality about the the authenticator

--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -210,6 +210,15 @@
   "moreFromBitwarden": {
     "message": "More from Bitwarden"
   },
+  "continueToBitwardenDotCom": {
+    "message": "Continue to bitwarden.com?"
+  },
+  "bitwardenAuthenticator": {
+    "message": "Bitwarden Authenticator"
+  },
+  "continueToAuthenticatorPageDesc": {
+    "message": "Bitwarden Authenticator allows you to store authenticator keys and generate TOTP codes for 2-step verification flows. Learn more on the bitwarden.com website"
+  },
   "version": {
     "message": "Version"
   },
