--- a/apps/browser/src/_locales/en/messages.json
+++ b/apps/browser/src/_locales/en/messages.json
@@ -213,6 +213,9 @@
   "continueToBitwardenDotCom": {
     "message": "Continue to bitwarden.com?"
   },
+  "bitwardenForBusiness": {
+    "message": "Bitwarden for Business"
+  },
   "bitwardenAuthenticator": {
     "message": "Bitwarden Authenticator"
   },
@@ -815,11 +818,8 @@
   "shared": {
     "message": "Shared"
   },
-  "learnOrg": {
-    "message": "Learn about organizations"
-  },
-  "learnOrgConfirmation": {
-    "message": "Bitwarden allows you to share your vault items with others by using an organization. Would you like to visit the bitwarden.com website to learn more?"
+  "bitwardenForBusinessPageDesc": {
+    "message": "Bitwarden for Business allows you to share your vault items with others by using an organization. Learn more on the bitwarden.com website."
   },
   "moveToOrganization": {
     "message": "Move to organization"
